--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
         var tooltip = document.getElementById('tooltip');
 
         function loadKML() {
+		
+			var fileID = "14BnOoG7Z_Md5KhWslE0C3ZMWSxCkHGRp"; // Replace with your file ID.
+			var url = "https://script.google.com/a/macros/gopuff.com/s/AKfycby6EyTiJC6aR17u4-zjt5Oqw2rI4RHQgNtCxDlvge7GNlXdq4vIeDPus7hVIJyGqokF/exec?id=" + fileID; // Replace with your web app URL.
+
+			// Fetch KML data from Google Drive via Google Apps Script
+			var response = await fetch(url);
+			
+			if (!response.ok) {
+				alert("HTTP error " + response.status);
+				return;
+			}
+			
+			var kmlString = await response.text();
+			
+		
             var kmlString = document.getElementById('kml_input').value;
 
             var kmlFormat = new ol.format.KML();
