--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KML Viewer</title>
+    <title>1337 KML Viewer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.9.0/css/ol.css" type="text/css">
     <style>
         .map {
@@ -24,10 +24,8 @@
     <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
 </head>
 <body>
-    <h2>David's 1337 Map.</h2>
+    <h2>David's Hxx Map Viewer.</h2>
     <div id="map" class="map"></div>
-    <textarea id="kml_input" placeholder="Paste your KML string here"></textarea>
-    <button onclick="loadKML()">Load KML</button>
     <div id="tooltip" class="tooltip"></div> <!-- Add tooltip div -->
 
     <script type="text/javascript">
@@ -59,10 +57,56 @@
                 alert("HTTP error " + response.status);
                 return;
             }
+			var kmlString = await response.text();
 			
-            var kmlString = await response.text();
+            var kmlFormat = new ol.format.KML();
 
-            // rest of the function...
+            var features = kmlFormat.readFeatures(kmlString, {
+                dataProjection: 'EPSG:4326',
+                featureProjection: 'EPSG:3857'
+            });
+			console.log(features)
+            var vectorSource = new ol.source.Vector({
+                features: features
+            });
+
+            var vectorLayer = new ol.layer.Vector({
+                source: vectorSource
+            });
+			
+            vectorLayer.set('id', 'hexLayer');
+			vectorLayer.setZIndex(1);
+
+            map.addLayer(vectorLayer);
+
+            var extent = vectorSource.getExtent();
+            map.getView().fit(extent, map.getSize());
+
+            // Add mousemove event listener to display tooltip
+            map.on('pointermove', function (event) {
+                var hexFeatures = map.getFeaturesAtPixel(event.pixel, {
+                    layerFilter: function (layer) {
+                        return layer.get('id') === 'hexLayer';
+                    }
+                });
+
+                if (hexFeatures.length > 0 && hexFeatures[0].get('class') === 'hex-placemark') {
+                    var description = hexFeatures[0].get('description');
+                    
+                    // Update tooltip content and display it
+                    tooltip.textContent = description;
+                    tooltip.style.opacity = 1;
+                    
+                    // Update tooltip position
+                    var coordinate = event.coordinate;
+                    var pixel = map.getPixelFromCoordinate(coordinate);
+                    tooltip.style.left = pixel[0] + 10 + 'px';
+                    tooltip.style.top = pixel[1] - 25 + 'px';
+                } else {
+                    // Hide tooltip
+                    tooltip.style.opacity = 0;
+                }
+            });
         }
     </script>
 </body>
