--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
 </head>
 <body>
-    <h2>David's Hxx Map Viewer.</h2>
+    <h2>David's Hex Map Viewer.</h2>
     <div id="map" class="map"></div>
     <div id="tooltip" class="tooltip"></div> <!-- Add tooltip div -->
 
