--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>1337 KML Viewer</title>
+    <title>KML Viewer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.9.0/css/ol.css" type="text/css">
     <style>
         .map {
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
 </head>
 <body>
-    <h2>David's Hex Map Viewer.</h2>
+    <h2>David's Hex Map Viewer V1.</h2>
     <div id="map" class="map"></div>
     <div id="tooltip" class="tooltip"></div> <!-- Add tooltip div -->
 
